# diesel

./: .appveyor.yml  .editorconfig  .env.example  .env.sample  .example.env  .gitignore  .travis.yml  .typos.toml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  azure-pipelines.yml  bors.toml  clippy.toml  code_of_conduct.md  deny.toml  diesel.rar  dist-workspace.toml  docker-compose.yml  guide.md  index.html  rust-toolchain  rustfmt.toml  test.db  à
diesel/: Cargo.toml  README.md  sqlite.txt
diesel/src/: backend.rs  data_types.rs  db_result.rs  deserialize.rs  doctest_setup.rs  hlist.rs  insertable.rs  lib.rs  macros.rs  persistable.rs  r2d2.rs  reexport_ambiguities.rs  result.rs  row.rs  serialize.rs  test_helpers.rs  util.rs
diesel_attribute_parser/: Cargo.toml
diesel_attribute_parser/src/: lib.rs  util.rs
diesel_bench/: Cargo.toml  Readme.md  build.rs
diesel_bench/benches/: common.rs  consts.rs  diesel_async_benches.rs  diesel_benches.rs  lib.rs  mysql_benches.rs  postgres_benches.rs  quaint_benches.rs  rusqlite_benches.rs  rust_orm_benches.rs  sqlx_benches.rs  tokio_postgres_benches.rs  wtx.rs  zero_mysql_async_benches.rs  zero_mysql_benches.rs  zero_postgres_async_benches.rs  zero_postgres_benches.rs
diesel_cli/: Cargo.toml  README.md  build.rs
diesel_cli/src/: cli.rs  config.rs  database.rs  database_error.rs  errors.rs  main.rs  pretty_printing.rs  print_schema.rs  query_helper.rs  setup_error.rs
diesel_cli/tests/: completion_generation.rs  database_drop.rs  database_reset.rs  database_setup.rs  database_url_errors.rs  exit_codes.rs  help_snapshots.rs  migration_generate.rs  migration_list.rs  migration_redo.rs  migration_revert.rs  migration_run.rs  migrations.rs  print_schema.rs  setup.rs  support.rs  tests.rs
diesel_codegen/: Cargo.toml  README.md  build.rs
diesel_codegen/src/: as_changeset.rs  associations.rs  ast_builder.rs  attr.rs  check_version.rs  constants.rs  database_url.rs  dummy_schema_inference.rs  embed_migrations.rs  identifiable.rs  insertable.rs  lib.in.rs  lib.rs  migrations.rs  model.rs  queriable.rs  queryable.rs  schema_inference.rs  type_inference.rs  update.rs  util.rs
diesel_codegen/tests/: associations.rs  identifiable.rs  insertable.rs  queryable.rs  test_helpers.rs  tests.rs
diesel_codegen_old/: Cargo.toml
diesel_codegen_old/src/: lib.rs
diesel_codegen_shared/: Cargo.toml
diesel_codegen_shared/src/: database_url.rs  lib.rs  migrations.rs
diesel_codegen_syntex/: Cargo.toml  README.md  build.rs
diesel_codegen_syntex/src/: attr.rs  dummy_schema_inference.rs  identifiable.rs  insertable.rs  lib.in.rs  lib.rs  migrations.rs  model.rs  queryable.rs  update.rs  util.rs
diesel_compile_tests/: Cargo.toml  rust-toolchain
diesel_compile_tests/tests/: Cargo.toml  compile_tests.rs  trybuild.rs
diesel_derives/: Cargo.toml  README.md  build.rs
diesel_derives/src/: allow_tables_to_appear_in_same_query.rs  appears_on_table.rs  as_changeset.rs  as_expression.rs  associations.rs  ast_builder.rs  attr.rs  attrs.rs  db_enum.rs  diagnostic_shim.rs  diesel_for_each_tuple.rs  diesel_numeric_ops.rs  diesel_public_if.rs  enum_.rs  expansion.rs  field.rs  for_each_tuple.rs  from_sql_row.rs  has_query.rs  identifiable.rs  insertable.rs  lib.rs  meta.rs  model.rs  multiconnection.rs  named_query_fragment.rs  named_queryable.rs  non_aggregate.rs  query_id.rs  query_model.rs  queryable.rs  queryable_by_column.rs  queryable_by_name.rs  resolved_at_shim.rs  selectable.rs  selectable_expression.rs  sql_function.rs  sql_type.rs  table.rs  util.rs  (+1 more)
diesel_derives/tests/: as_changeset.rs  as_expression.rs  associations.rs  auto_type.rs  enum_.rs  helpers.rs  identifiable.rs  insertable.rs  missing_docs.rs  multiconnection.rs  queryable.rs  queryable_by_column.rs  queryable_by_name.rs  schema.rs  selectable.rs  test_helpers.rs  tests.rs
diesel_derives2/: Cargo.toml
diesel_derives2/src/: as_changeset.rs  as_expression.rs  associations.rs  diagnostic_shim.rs  field.rs  identifiable.rs  insertable.rs  lib.rs  meta.rs  model.rs  query_id.rs  queryable.rs  util.rs
diesel_derives2/tests/: as_changeset.rs  helpers.rs  identifiable.rs  schema.rs  tests.rs
diesel_dynamic_schema/: Cargo.toml  Cargo.toml.orig  LICENSE-APACHE  LICENSE-MIT  README.md
diesel_dynamic_schema/examples/: columns_used_in_where_clause.rs  copy_to_from.rs  querying_basic_schemas.rs  querying_multiple_types.rs
diesel_dynamic_schema/src/: column.rs  dummy_expression.rs  dynamic_select.rs  dynamic_value.rs  lib.rs  schema.rs  table.rs
diesel_dynamic_schema/tests/: change_hooks.rs  connection_setup.rs  delete.rs  dynamic_values.rs  lib.rs
diesel_infer_query/: Cargo.toml
diesel_infer_query/src/: error.rs  expression.rs  lib.rs  query_source.rs  resolver.rs  select.rs  views.rs
diesel_infer_query/tests/: infer.rs  lib.rs  parsing.rs
diesel_infer_schema/: Cargo.toml
diesel_infer_schema/infer_schema_internals/: Cargo.toml
diesel_infer_schema/infer_schema_macros/: Cargo.toml
diesel_infer_schema/src/: codegen.rs  data_structures.rs  foreign_keys.rs  inference.rs  information_schema.rs  lib.rs  lib.rs~  mysql.rs  pg.rs  sqlite.rs  table_data.rs
diesel_migrations/: Cargo.toml
diesel_migrations/migrations_internals/: Cargo.toml
diesel_migrations/migrations_macros/: Cargo.toml
diesel_migrations/src/: combined_migrations.rs  embedded_migrations.rs  embeded_migrations.rs  errors.rs  file_based_migrations.rs  lib.rs  migration_harness.rs  rust_migrations.rs
diesel_proc_macro/: Cargo.toml
diesel_proc_macro/src/: lib.rs
diesel_proc_macro_internal/: Cargo.toml
diesel_proc_macro_internal/src/: embed_migrations.rs  lib.rs  migrations.rs  util.rs  (+1 more)
diesel_table_macro_syntax/: Cargo.toml
diesel_test_helpers/: Cargo.toml
diesel_tests/: 2  Cargo.toml  build.rs  log  test_results
dsl_auto_type/: Cargo.toml
examples/: Cargo.toml  test_all  test_nightly  test_stable
fuzz/: Cargo.toml
xtask/: Cargo.toml
yaqb_codegen/: Cargo.toml  README.md  build.rs
yaqb_tests/: Cargo.toml  build.rs
(+243540 files in other folders)
