[workspace]
members = [
    "diesel",
    "diesel_cli",
    "diesel_derives",
    "diesel_tests",
    "diesel_migrations",
    "diesel_migrations/migrations_internals",
    "diesel_migrations/migrations_macros",
    "diesel_dynamic_schema",
    "examples/mysql/all_about_inserts",
    "examples/mysql/getting_started_step_1",
    "examples/mysql/getting_started_step_2",
    "examples/mysql/getting_started_step_3",
    "examples/postgres/advanced-blog-cli",
    "examples/postgres/all_about_inserts",
    "examples/postgres/all_about_updates",
    "examples/postgres/getting_started_step_1",
    "examples/postgres/getting_started_step_2",
    "examples/postgres/getting_started_step_3",
    "examples/postgres/custom_types",
    "examples/sqlite/all_about_inserts",
    "examples/sqlite/getting_started_step_1",
    "examples/sqlite/getting_started_step_2",
    "examples/sqlite/getting_started_step_3",
]
