[workspace]
resolver = "2"
members = [
    "diesel",
    "diesel_cli",
    "diesel_derives",
    "diesel_tests",
    "diesel_test_helper",
    "diesel_migrations",
    "diesel_migrations/migrations_internals",
    "diesel_migrations/migrations_macros",
    "diesel_dynamic_schema",
    "diesel_table_macro_syntax",
    "dsl_auto_type",
    "examples/mysql/all_about_inserts",
    "examples/mysql/getting_started_step_1",
    "examples/mysql/getting_started_step_2",
    "examples/mysql/getting_started_step_3",
    "examples/postgres/advanced-blog-cli",
    "examples/postgres/all_about_inserts",
    "examples/postgres/all_about_updates",
    "examples/postgres/getting_started_step_1",
    "examples/postgres/getting_started_step_2",
    "examples/postgres/getting_started_step_3",
    "examples/postgres/custom_arrays",
    "examples/postgres/custom_types",
    "examples/postgres/composite_types",
    "examples/postgres/relations",
    "examples/sqlite/all_about_inserts",
    "examples/sqlite/getting_started_step_1",
    "examples/sqlite/getting_started_step_2",
    "examples/sqlite/getting_started_step_3",
    "examples/sqlite/relations",
    "examples/sqlite/wasm",
    "xtask",
]

[workspace.package]
rust-version = "1.86.0"
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]
edition = "2021"

[workspace.dependencies]
libsqlite3-sys = ">=0.30.1,<0.36.0"
pq-sys = ">=0.6,<0.8"
openssl-sys = "0.9.100"
mysqlclient-sys = "0.4"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
