[package]
name = "diesel_bench"
version = "0.1.0"
edition = "2018"
build = "build.rs"
autobenches = false

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
criterion = {version = "0.5", default-features = false, features = ["csv_output", "cargo_bench_support"]}
sqlx = {version = "0.7", features = ["runtime-tokio-rustls"], optional = true}
tokio = {version = "1", optional = true}
rusqlite = {version = "0.29", optional = true}
rust_postgres = {version = "0.19.7", optional = true, package = "postgres"}
rust_mysql = {version = "23.0", optional = true, package = "mysql"}
rustorm = {version = "0.20", optional = true}
rustorm_dao = {version = "0.20", optional = true}
quaint = {version = "=0.2.0-alpha.13", optional = true, features = ["uuid"]}
serde = {version = "1", optional = true, features = ["derive"]}
sea-orm = {  git = "https://github.com/SeaQL/sea-orm/", branch = "master", optional = true, features = ["runtime-tokio-rustls"]}
futures = {version = "0.3", optional = true}
diesel-async = {version = "0.4", optional = true, default-features = false}
criterion-perf-events = { version = "0.4", optional = true}
perfcnt = {version = "0.8", optional = true}
wtx = { default-features = false, features = ["atoi", "postgres", "simdutf8", "std", "tokio"], optional = true, version = "0.12" }

[dependencies.diesel]
path = "../diesel"
default-features = false
features = []

[build-dependencies]
diesel = { path = "../diesel", default-features = false }
diesel_migrations = { path = "../diesel_migrations" }
dotenvy = "0.15"


[[bench]]
name = "benchmarks"
path = "benches/lib.rs"
bench = true
harness = false

[features]
default = []
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]
sqlx-bench = ["sqlx", "tokio", "sqlx/runtime-tokio-rustls"]
instruction_count = ["criterion-perf-events", "perfcnt"]
fast_run = []


[patch.crates-io]
quaint = {git = "https://github.com/prisma/prisma-engines", rev = "8f088bb"}
diesel-async = { git = "https://github.com/weiznich/diesel_async", rev = "017ebe2"}
diesel = { path = "../diesel"}
