[package]
name = "diesel_bench"
version = "0.1.0"
edition = "2021"
build = "build.rs"
autobenches = false

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
criterion = { version = "0.6", default-features = false, features = [
  "csv_output",
  "cargo_bench_support",
] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
], optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
rusqlite = { version = "0.32", optional = true }
rust_postgres = { version = "0.19.7", optional = true, package = "postgres" }
tokio_postgres = { version = "0.7.10", optional = true, package = "tokio-postgres" }
rand_chacha = { features = ["os_rng"], optional = true, version = "0.9" }
rust_mysql = { version = "26.0", optional = true, package = "mysql" }
rustorm = { version = "0.20", optional = true }
rustorm_dao = { version = "0.20", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
sea-orm = { version = "1.1.0", optional = true, features = [
  "runtime-tokio-rustls",
] }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
criterion-perf-events = { version = "0.4", optional = true }
perfcnt = { version = "0.8", optional = true }
wtx = { default-features = false, features = [
  "getrandom",
  "optimization",
  "std",
  "tokio"
], optional = true, version = "0.38.0" }

[dependencies.diesel-async]
git = "https://github.com/weiznich/diesel_async"
branch = "main"
optional = true
default-features = false

[dependencies.diesel]
path = "../diesel"
default-features = false
features = []

[build-dependencies]
diesel = { path = "../diesel", default-features = false }
diesel_migrations = { path = "../diesel_migrations" }
dotenvy = "0.15"


[[bench]]
name = "benchmarks"
path = "benches/lib.rs"
bench = true
harness = false

[features]
default = []
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]
sqlx-bench = ["sqlx", "tokio", "sqlx/runtime-tokio-rustls"]
instruction_count = ["criterion-perf-events", "perfcnt"]
fast_run = []

[profile.release]
lto = true
debug = true
codegen-units = 1

[patch.crates-io]
diesel-async = { git = "https://github.com/weiznich/diesel_async", branch = "main" }
diesel = { path = "../diesel" }

[patch.'https://github.com/diesel-rs/diesel']
diesel = { path = "../diesel" }
