[package]
name = "diesel_cli"
version = "2.2.1"
license = "MIT OR Apache-2.0"
description = "Provides the CLI for the Diesel crate"
readme = "README.md"
documentation = "https://diesel.rs/guides/getting-started"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["diesel", "migrations", "cli"]
autotests = false
edition = "2021"
rust-version.workspace = true

include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "LICENSE-*",
    "README.md",
    "src/default_files/diesel.toml",
    "src/infer_schema_internals/load_foreign_keys.sql",
    "src/setup_sql/postgres/initial_setup/down.sql",
    "src/setup_sql/postgres/initial_setup/up.sql",
]

[package.metadata.wix]
upgrade-guid = "AC330981-F4F8-4D8A-AD78-F8B7ECC32DF3"
path-guid = "1730337B-A19D-4DDE-AFA5-983752956861"

[[bin]]
name = "diesel"
path = "src/main.rs"
doc = false

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.4.14", features = ["cargo", "string"] }
clap_complete = "4"
dotenvy = "0.15"
heck = "0.5.0"
serde = { version = "1.0.193", features = ["derive", "std"] }
toml = "0.8"
url = { version = "2.2.2" }
libsqlite3-sys = { version = ">=0.17.2, <0.29.0", optional = true }
pq-sys = { version = ">=0.4, <0.7.0", optional = true }
openssl-sys = { version = "0.9.93", features = ["vendored"], optional = true }
mysqlclient-sys = { version = "0.4.0", optional = true }
diffy = "0.3.0"
regex = "1.0.6"
serde_regex = "1.1"
diesel_table_macro_syntax = { version = "0.2", path = "../diesel_table_macro_syntax" }
syn = { version = "2", features = ["visit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
thiserror = "1.0.10"

[dependencies.diesel]
version = "~2.2.0"
path = "../diesel"
default-features = false

[dependencies.diesel_migrations]
version = "~2.2.0"
path = "../diesel_migrations/"

[dev-dependencies]
tempfile = "3.1.0"
regex = "1.3.9"
insta = "1.21"

[features]
default = ["postgres", "sqlite", "mysql"]
postgres = ["diesel/postgres", "uses_information_schema"]
sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql", "uses_information_schema"]
sqlite-bundled = ["sqlite", "dep:libsqlite3-sys", "libsqlite3-sys/bundled"]
postgres-bundled = ["postgres", "dep:pq-sys", "pq-sys/bundled", "dep:openssl-sys"]
mysql-bundled = ["mysql", "dep:mysqlclient-sys", "mysqlclient-sys/bundled"]
uses_information_schema = []

[[test]]
name = "tests"

[package.metadata.dist]
features = ["sqlite-bundled", "postgres-bundled", "mysql-bundled"]
