[package]
name = "diesel_cli"
version = "2.3.6"
license = "MIT OR Apache-2.0"
description = "Provides the CLI for the Diesel crate"
readme = "README.md"
documentation = "https://diesel.rs/guides/getting-started"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["diesel", "migrations", "cli"]
autotests = false
edition.workspace = true
rust-version.workspace = true

include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "LICENSE-*",
    "README.md",
    "src/default_files/diesel.toml",
    "src/infer_schema_internals/load_foreign_keys.sql",
    "src/setup_sql/postgres/initial_setup/down.sql",
    "src/setup_sql/postgres/initial_setup/up.sql",
]

[package.metadata.wix]
upgrade-guid = "AC330981-F4F8-4D8A-AD78-F8B7ECC32DF3"
path-guid = "1730337B-A19D-4DDE-AFA5-983752956861"

[[bin]]
name = "diesel"
path = "src/main.rs"
doc = false

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.5.56", features = ["cargo", "string", "derive"] }
clap_complete = "4"
dotenvy = "0.15"
dunce = "1.0.5"
heck = "0.5.0"
serde = { version = "1.0.193", features = ["derive", "std"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
url = "2.2.2"
libsqlite3-sys = { workspace = true, optional = true }
pq-sys = { workspace = true, optional = true }
openssl-sys = { workspace = true, features = ["vendored"], optional = true }
mysqlclient-sys = { workspace = true, optional = true }
diffy = "0.4.0"
regex = "1.0.6"
serde_regex = "1.1"
diesel_table_macro_syntax = { version = "0.3", path = "../diesel_table_macro_syntax" }
syn = { version = "2", features = ["visit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
thiserror = "2.0.0"
similar-asserts = "1.6.0"
fd-lock = "4.0.2"

[dependencies.diesel]
version = "~2.3.0"
path = "../diesel"
default-features = false

[dependencies.diesel_migrations]
version = "~2.3.0"
path = "../diesel_migrations/"

[dependencies.diesel_infer_query]
version = "0.1.0"
path = "../diesel_infer_query"

[dev-dependencies]
tempfile = "3.1.0"
regex = "1.3.9"
insta = "1.21"

[features]
default = ["postgres", "sqlite", "mysql"]
postgres = ["diesel/postgres", "uses_information_schema"]
sqlite = ["diesel/sqlite", "diesel/std"]
mysql = ["diesel/mysql", "uses_information_schema"]
sqlite-bundled = ["sqlite", "dep:libsqlite3-sys", "libsqlite3-sys/bundled"]
postgres-bundled = ["postgres", "dep:pq-sys", "pq-sys/bundled", "dep:openssl-sys"]
mysql-bundled = ["mysql", "dep:mysqlclient-sys", "mysqlclient-sys/bundled", "dep:openssl-sys"]
uses_information_schema = []

[[test]]
name = "tests"

[package.metadata.dist]
features = ["sqlite-bundled", "postgres-bundled", "mysql-bundled"]
