[package]
name = "diesel_codegen"
version = "0.9.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Custom derive and procedural macros for Diesel"
documentation = "http://docs.diesel.rs"
homepage = "http://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_codegen"
keywords = ["orm", "database", "postgres", "sql", "codegen"]

[dependencies]
syn = "0.10.3"
quote = "0.3.10"
diesel = { version = "0.9.0", default-features = false }
diesel_codegen_shared = { version = "0.9.0", default-features = false }
diesel_infer_schema = { version = "0.1.0", default-features = false, path = "../diesel_infer_schema" }

[lib]
proc-macro = true

[features]
default = ["dotenv"]
dotenv = ["diesel_codegen_shared/dotenv"]
postgres = ["diesel_codegen_shared/postgres", "diesel_infer_schema/postgres"]
sqlite = ["diesel_codegen_shared/sqlite", "diesel_infer_schema/sqlite"]


