[package]
name = "diesel_codegen"
version = "0.16.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Custom derive and procedural macros for Diesel"
readme = "README.md"
documentation = "http://docs.diesel.rs"
homepage = "http://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_codegen"
keywords = ["orm", "database", "postgres", "sql", "codegen"]

[dependencies]
syn = { version = "0.11.4", features = ["aster"] }
quote = "0.3.12"
dotenv = { version = ">=0.8, <0.11", optional = true, default-features = false }
diesel = { version = "0.16.0", default-features = false }
diesel_infer_schema = { version = "0.16.0", default-features = false, optional = true }
clippy = { optional = true, version = "=0.0.155" }

[dev-dependencies]
tempdir = "0.3.4"
cfg-if = "0.1.0"

[lib]
proc-macro = true

[features]
default = ["dotenv"]
lint = ["clippy"]
postgres = ["diesel_infer_schema/postgres", "diesel/postgres"]
sqlite = ["diesel_infer_schema/sqlite", "diesel/sqlite"]
mysql = ["diesel_infer_schema/mysql", "diesel/mysql"]

[[test]]
name = "tests"

[badges]
travis-ci = { repository = "diesel-rs/diesel" }
appveyor = { repository = "diesel-rs/diesel" }
