[package]
name = "diesel_codegen"
version = "0.16.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Custom derive and procedural macros for Diesel"
readme = "README.md"
documentation = "https://diesel.rs/guides/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_codegen"
keywords = ["orm", "database", "postgres", "sql", "codegen"]

[dependencies]
syn = { version = "0.11.4", features = ["aster"] }
quote = "0.3.12"
dotenv = { version = ">=0.8, <0.11", optional = true, default-features = false }
clippy = { optional = true, version = "=0.0.162" }

[dev-dependencies]
tempdir = "0.3.4"
diesel = { version = "0.16", features = ["sqlite"] }

[lib]
proc-macro = true

[features]
default = ["dotenv"]
lint = ["clippy"]

[[test]]
name = "tests"

[badges]
travis-ci = { repository = "diesel-rs/diesel" }
appveyor = { repository = "sgrif/diesel" }
