[package]
name = "diesel_codegen_old"
version = "0.7.2"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Annotations to remove boilerplate from Diesel"
documentation = "https://github.com/diesel-rs/diesel/blob/master/diesel_codegen"
homepage = "http://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_codegen"
keywords = ["orm", "database", "postgres", "sql", "codegen"]

[features]
default = ["postgres", "dotenv"]
dotenv = []
postgres = []
sqlite = []

[lib]
plugin = true
