[package]
name = "diesel_codegen_syntex"
version = "0.9.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
description = "Allows use of `diesel_codegen` with `syntex`"
documentation = "https://github.com/diesel-rs/diesel/blob/master/diesel_codegen"
homepage = "http://diesel.rs"
repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_codegen"
keywords = ["orm", "database", "postgres", "sql", "codegen"]

[build-dependencies]
syntex = { version = "0.44.0" }
syntex_syntax = { version = "0.44.0" }

[dependencies]
syntex = { version = "0.44.0" }
syntex_syntax = { version = "0.44.0" }
diesel = { version = "0.9.0", default-features = false }
diesel_codegen_shared = { version = "0.9.0", default-features = false }

[features]
default = ["dotenv"]
dotenv = ["diesel_codegen_shared/dotenv"]
postgres = ["diesel/postgres", "diesel_codegen_shared/postgres"]
sqlite = ["diesel/sqlite", "diesel_codegen_shared/sqlite"]
