[package]
name = "diesel_compile_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[dependencies]
diesel = { version = "2.0.0", default-features = false, features = ["extras", "sqlite", "postgres", "mysql", "unstable"], path = "../diesel" }
trybuild = {git = "https://github.com/weiznich/trybuild", rev = "44d736bc7872e92b513d581b009e52bddf940de1"}

[workspace]
